fixed vertical alignment issue in table

--- a/src/components/css/MyMealPlan.module.css
+++ b/src/components/css/MyMealPlan.module.css
@@ -31,7 +31,8 @@
 }
 
 .tableRows {
-    line-height: 100px;
+    height: 100px;
+    vertical-align: middle;
 }
 
 /* Mobile Accessibility */
