--- a/src/components/css/TriggerText.module.css
+++ b/src/components/css/TriggerText.module.css
@@ -11,6 +11,7 @@
 .foodPlanButtons {
     font-size: 14px;
     overflow: hidden;
+    vertical-align: middle;
 }
 
 .foodPlanButtons:hover {
